2001-05-08  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network-conf.in (xml_print): Oops: print dialinstalled
	tag too.

	* parse.pl.in (xst_parse_split_ref): Do a regexp comparison,
	which is more flexible.

	* network.pl.in (xst_network_get_parse_table): Check if
	wvdial tool is installed. Just to warn the user about it.
	(xst_network_get_pap_passwd): Handle values surrounded
	by double quotes.

	* file.pl.in (xst_file_tool_installed): Check if a tool
	is found. Return 1/0 value.

	* general.pl.in (xst_end): Turn off reporting here, to make
	sure no further reporting gets mixed with the XML.

	* network.pl.in (xst_network_sysconfig_ifaces_get_existing):
	only check files that START with ifcfg-. This was confusing
	the backend with Mandrake's, and potentially others, backup
	files.

2001-05-08  Arturo Espinosa Aldama  <arturo@ximian.com>

	After some profiling, some optimizations:
	
	* report.pl.in (xst_report): Only send debug string if debug flag
	is set.

	* parse.pl.in (xst_parse_from_table): Calling xst_report instead
	of doing a direct debug.

	* gettext.pl.in (gettext): gettext results are now cached. This
	is still too expensive, and we should use the gettext CPAN module.

	* file.pl.in (xst_file_open_read_from_names): removed unnecesary
	debug function.
	(xst_file_run): system already calls with /bin/sh -c. Removed.
	  

2001-05-07  Arturo Espinosa Aldama  <arturo@ximian.com>

	* report.pl.in (xst_report_enter, xst_report_leave): trivialized
	  until a new solution comes. Read comments for comments.

2001-05-04  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (read_exports): Parse NFS exports without options correctly.
	  (print_xml): Print a default name for unnamed shares.

2001-05-04  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (write_fstab): Don't leave unaccounted-for shares lying
	  around.
	  (set_immediate): Use new service calls. Interim fix.

2001-04-30  Hans Petter Jansson  <hpj@ximian.com>
